<resources>
    <string name="app_name">StreamPlayerApp</string>
    <string name="retry_button">Retry</string>
    <string name="video_picture">video picture</string>
    <string name="app_title_name">Stream Player</string>
    <string name="category_name">Short videos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seconds">seconds</string>
    <string name="previous_video">previous_video</string>
    <string name="next_video">next video</string>
    <string name="play_video">play_video</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="api_rate_limit_exceeded">API rate limit exceeded</string>
    <string name="go_back">Go back</string>
    <string name="go_back_to_video_list">Go back to video list screen</string>
    <string name="no_internet_connection_status">No internet connection status</string>
</resources>