<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootControllerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal"
    tools:background="@color/coal">

    <com.kliachenko.presentation.customView.CustomPlayImageButton
        android:id="@+id/exo_play"
        style="@style/PlayerControlButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/play_video"
        android:src="@drawable/play_ic" />

    <com.kliachenko.presentation.customView.CustomSkipImageButton
        android:id="@+id/exo_prev"
        style="@style/PlayerControlButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/previous_video"
        android:src="@drawable/skip_previous_ic" />

    <com.kliachenko.presentation.customView.CustomSkipImageButton
        android:id="@+id/exo_next"
        style="@style/PlayerControlButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/next_video"
        android:src="@drawable/skip_next_ic" />

    <ProgressBar
        android:id="@+id/exo_progress"
        style="@style/ProgressBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>